// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sidebar > snapshot: expanded sidebar LTR 1`] = `
<div>
  <div
    style="display: flex; min-height: 100vh;"
  >
    <nav
      aria-label="Main navigation"
      role="navigation"
      style="width: 240px; min-width: 240px; background-color: rgb(21, 26, 30); color: rgb(255, 255, 255); display: flex; flex-direction: column; font-family: var(--font-family-sans); transition: width 250ms ease, min-width 250ms ease; overflow: hidden; position: sticky; inset-block-start: 0; height: 100vh; z-index: 100;"
    >
      <div
        style="display: flex; align-items: center; justify-content: space-between; padding-inline: 0.75rem; padding-block: 1rem; border-block-end: 1px solid hsl(210, 12%, 25%);"
      >
        <span
          style="font-weight: 700; font-size: 1.125rem; color: rgb(117, 209, 172); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
        >
          OPD Lite
        </span>
        <button
          aria-expanded="true"
          aria-label="Collapse navigation"
          style="background: none; cursor: pointer; color: rgb(131, 140, 149); padding: 0.25rem; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
          type="button"
        >
          <span
            aria-hidden="true"
            style="display: inline-flex; align-items: center; justify-content: center; transform: var(--directional-icon-transform, none);"
          >
            <svg
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="transition: transform 150ms ease;"
              viewBox="0 0 24 24"
              width="20"
            >
              <path
                d="M15 18l-6-6 6-6"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        style="flex: 1 1 0%; overflow-y: auto; padding-block: 0.5rem;"
      >
        <div>
          <a
            aria-current="page"
            href="/"
            style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(117, 209, 172); background-color: rgb(11, 50, 35); text-decoration: none; font-size: 0.875rem; font-weight: 600; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
          >
            <span
              style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
            >
              <span
                data-testid="icon-dashboard"
              >
                D
              </span>
            </span>
            <span
              style="flex: 1 1 0%;"
            >
              Dashboard
            </span>
          </a>
        </div>
        <div>
          <a
            href="/patients"
            style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(179, 186, 193); background-color: transparent; text-decoration: none; font-size: 0.875rem; font-weight: 500; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
          >
            <span
              style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
            >
              <span
                data-testid="icon-patients"
              >
                P
              </span>
            </span>
            <span
              style="flex: 1 1 0%;"
            >
              Patients
            </span>
          </a>
        </div>
        <div>
          <div
            data-testid="group-divider"
            style="height: 1px; background-color: rgb(56, 64, 71); margin-block: 0.5rem; margin-inline: 0.75rem;"
          />
          <a
            href="/notifications"
            style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(179, 186, 193); background-color: transparent; text-decoration: none; font-size: 0.875rem; font-weight: 500; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
          >
            <span
              style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
            >
              <span
                data-testid="icon-notif"
              >
                N
              </span>
            </span>
            <span
              style="flex: 1 1 0%;"
            >
              Notifications
            </span>
            <span
              style="background-color: rgb(220, 40, 40); color: rgb(255, 255, 255); font-size: 0.625rem; font-weight: 700; line-height: 1; padding-inline: 0.375rem; padding-block: 0.125rem; border-radius: 9999px; min-width: 18px; text-align: center; position: static;"
            >
              5
            </span>
          </a>
        </div>
        <div>
          <div
            data-testid="group-divider"
            style="height: 1px; background-color: rgb(56, 64, 71); margin-block: 0.5rem; margin-inline: 0.75rem;"
          />
          <a
            href="/settings"
            style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(179, 186, 193); background-color: transparent; text-decoration: none; font-size: 0.875rem; font-weight: 500; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
          >
            <span
              style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
            >
              <span
                data-testid="icon-settings"
              >
                S
              </span>
            </span>
            <span
              style="flex: 1 1 0%;"
            >
              Settings
            </span>
          </a>
        </div>
      </div>
      <div
        style="border-block-start: 1px solid hsl(210, 12%, 25%); padding-block: 0.75rem; padding-inline: 0.75rem;"
      >
        <div
          style="display: flex; align-items: center; gap: 0.75rem; margin-block-end: 0.5rem;"
        >
          <span
            style="width: 32px; height: 32px; border-radius: 9999px; background-color: rgb(26, 102, 71); color: rgb(214, 245, 233); font-weight: 600; font-size: 0.75rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
          >
            DA
          </span>
          <div
            style="overflow: hidden; flex: 1 1 0%;"
          >
            <div
              style="font-size: 0.875rem; font-weight: 500; color: rgb(237, 240, 242); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
            >
              Dr. Ahmad
            </div>
            <span
              style="font-size: 0.625rem; color: rgb(66, 189, 140); font-weight: 500;"
            >
              Physician
            </span>
          </div>
        </div>
        <button
          aria-label="Sign out"
          style="display: flex; align-items: center; justify-content: flex-start; gap: 0.75rem; width: 100%; padding-block: 0.5rem; padding-inline: 0.5rem; background-color: transparent; border-radius: 0.5rem; color: rgb(131, 140, 149); font-size: 0.875rem; cursor: pointer; font-family: inherit; transition: color 150ms ease;"
          type="button"
        >
          <svg
            fill="none"
            height="18"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="18"
          >
            <path
              d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
            />
            <polyline
              points="16 17 21 12 16 7"
            />
            <line
              x1="21"
              x2="9"
              y1="12"
              y2="12"
            />
          </svg>
          Sign out
        </button>
      </div>
    </nav>
    <div
      style="flex: 1 1 0%; min-width: 0;"
    >
      <main>
        Main Content
      </main>
    </div>
  </div>
</div>
`;

exports[`Sidebar > snapshot: expanded sidebar RTL 1`] = `
<div>
  <div
    dir="rtl"
  >
    <div
      style="display: flex; min-height: 100vh;"
    >
      <nav
        aria-label="Main navigation"
        role="navigation"
        style="width: 240px; min-width: 240px; background-color: rgb(21, 26, 30); color: rgb(255, 255, 255); display: flex; flex-direction: column; font-family: var(--font-family-sans); transition: width 250ms ease, min-width 250ms ease; overflow: hidden; position: sticky; inset-block-start: 0; height: 100vh; z-index: 100;"
      >
        <div
          style="display: flex; align-items: center; justify-content: space-between; padding-inline: 0.75rem; padding-block: 1rem; border-block-end: 1px solid hsl(210, 12%, 25%);"
        >
          <span
            style="font-weight: 700; font-size: 1.125rem; color: rgb(117, 209, 172); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            OPD Lite
          </span>
          <button
            aria-expanded="true"
            aria-label="Collapse navigation"
            style="background: none; cursor: pointer; color: rgb(131, 140, 149); padding: 0.25rem; border-radius: 0.25rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
            type="button"
          >
            <span
              aria-hidden="true"
              style="display: inline-flex; align-items: center; justify-content: center; transform: var(--directional-icon-transform, none);"
            >
              <svg
                fill="none"
                height="20"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                style="transition: transform 150ms ease;"
                viewBox="0 0 24 24"
                width="20"
              >
                <path
                  d="M15 18l-6-6 6-6"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          style="flex: 1 1 0%; overflow-y: auto; padding-block: 0.5rem;"
        >
          <div>
            <a
              aria-current="page"
              href="/"
              style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(117, 209, 172); background-color: rgb(11, 50, 35); text-decoration: none; font-size: 0.875rem; font-weight: 600; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
            >
              <span
                style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
              >
                <span
                  data-testid="icon-dashboard"
                >
                  D
                </span>
              </span>
              <span
                style="flex: 1 1 0%;"
              >
                Dashboard
              </span>
            </a>
          </div>
          <div>
            <a
              href="/patients"
              style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(179, 186, 193); background-color: transparent; text-decoration: none; font-size: 0.875rem; font-weight: 500; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
            >
              <span
                style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
              >
                <span
                  data-testid="icon-patients"
                >
                  P
                </span>
              </span>
              <span
                style="flex: 1 1 0%;"
              >
                Patients
              </span>
            </a>
          </div>
          <div>
            <div
              data-testid="group-divider"
              style="height: 1px; background-color: rgb(56, 64, 71); margin-block: 0.5rem; margin-inline: 0.75rem;"
            />
            <a
              href="/notifications"
              style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(179, 186, 193); background-color: transparent; text-decoration: none; font-size: 0.875rem; font-weight: 500; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
            >
              <span
                style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
              >
                <span
                  data-testid="icon-notif"
                >
                  N
                </span>
              </span>
              <span
                style="flex: 1 1 0%;"
              >
                Notifications
              </span>
              <span
                style="background-color: rgb(220, 40, 40); color: rgb(255, 255, 255); font-size: 0.625rem; font-weight: 700; line-height: 1; padding-inline: 0.375rem; padding-block: 0.125rem; border-radius: 9999px; min-width: 18px; text-align: center; position: static;"
              >
                5
              </span>
            </a>
          </div>
          <div>
            <div
              data-testid="group-divider"
              style="height: 1px; background-color: rgb(56, 64, 71); margin-block: 0.5rem; margin-inline: 0.75rem;"
            />
            <a
              href="/settings"
              style="display: flex; align-items: center; gap: 0.75rem; padding-inline: 0.75rem; padding-block: 0.5rem; margin-inline: 0.5rem; border-radius: 0.5rem; color: rgb(179, 186, 193); background-color: transparent; text-decoration: none; font-size: 0.875rem; font-weight: 500; white-space: nowrap; transition: background-color 150ms ease, color 150ms ease; position: relative;"
            >
              <span
                style="display: flex; align-items: center; justify-content: center; width: 20px; height: 20px; flex-shrink: 0;"
              >
                <span
                  data-testid="icon-settings"
                >
                  S
                </span>
              </span>
              <span
                style="flex: 1 1 0%;"
              >
                Settings
              </span>
            </a>
          </div>
        </div>
        <div
          style="border-block-start: 1px solid hsl(210, 12%, 25%); padding-block: 0.75rem; padding-inline: 0.75rem;"
        >
          <div
            style="display: flex; align-items: center; gap: 0.75rem; margin-block-end: 0.5rem;"
          >
            <span
              style="width: 32px; height: 32px; border-radius: 9999px; background-color: rgb(26, 102, 71); color: rgb(214, 245, 233); font-weight: 600; font-size: 0.75rem; display: flex; align-items: center; justify-content: center; flex-shrink: 0;"
            >
              DA
            </span>
            <div
              style="overflow: hidden; flex: 1 1 0%;"
            >
              <div
                style="font-size: 0.875rem; font-weight: 500; color: rgb(237, 240, 242); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
              >
                Dr. Ahmad
              </div>
              <span
                style="font-size: 0.625rem; color: rgb(66, 189, 140); font-weight: 500;"
              >
                Physician
              </span>
            </div>
          </div>
          <button
            aria-label="Sign out"
            style="display: flex; align-items: center; justify-content: flex-start; gap: 0.75rem; width: 100%; padding-block: 0.5rem; padding-inline: 0.5rem; background-color: transparent; border-radius: 0.5rem; color: rgb(131, 140, 149); font-size: 0.875rem; cursor: pointer; font-family: inherit; transition: color 150ms ease;"
            type="button"
          >
            <svg
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
            >
              <path
                d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"
              />
              <polyline
                points="16 17 21 12 16 7"
              />
              <line
                x1="21"
                x2="9"
                y1="12"
                y2="12"
              />
            </svg>
            Sign out
          </button>
        </div>
      </nav>
      <div
        style="flex: 1 1 0%; min-width: 0;"
      >
        <main>
          Main Content
        </main>
      </div>
    </div>
  </div>
</div>
`;
